kubernetes/argocd/applications/horizon-laravel/deployment.yml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horizon-laravel
  labels:
    app: horizon-laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: horizon-laravel
  template:
    metadata:
      labels:
        app: horizon-laravel
    spec:
      containers:
      - name: horizon-laravel
        image: registry.digitalocean.com/kubeden/horizon-laravel:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
