kubernetes/argocd/applications/horizon-laravel/service.yml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: horizon-laravel-service
spec:
  selector:
    app: horizon-laravel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
