kubernetes/argocd/applications/horizon-laravel/ingress.yml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: horizon-laravel-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: horizon.kubeden.io
spec:
  tls:
  - hosts:
    - horizon.kubeden.io
    secretName: horizon-laravel-tls
  rules:
  - host: horizon.kubeden.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: horizon-laravel-service
            port: 
              number: 80
